// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<Default__StyledSpan>
  <Section
    appCanvas={false}
    className=""
    dimmed={false}
    key=".0"
  >
    <div />
  </Section>
</Default__StyledSpan>
`;

exports[`When using snapshots with the dimmed prop Should render with an element children 1`] = `
<Default__StyledSpan>
  <Section
    appCanvas={false}
    className=""
    dimmed={true}
    key=".0"
  >
    <div />
  </Section>
</Default__StyledSpan>
`;
